update of LaTeX templates to the GECCO 2018 data

--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -40,15 +40,15 @@
 
 
 % DOI
-\acmDOI{10.475/123_4}
+\acmDOI{10.1145/123_4}
 
 % ISBN
-\acmISBN{123-4567-24-567/08/06}
+\acmISBN{123-4567-24-567/18/07}
 
 %Conference
-\acmConference[GECCO '17]{the Genetic and Evolutionary Computation Conference 2017}{July 15--19, 2017}{Berlin, Germany}
-\acmYear{2017}
-\copyrightyear{2017}
+\acmConference[GECCO '18]{the Genetic and Evolutionary Computation Conference 2018}{July 15--19, 2018}{Kyoto, Japan}
+\acmYear{2018}
+\copyrightyear{2018}
 
 \acmPrice{15.00}
 
