--- a/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
@@ -2,15 +2,16 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
+\usepackage{booktabs} % For formal tables
 \usepackage{graphicx}
-\usepackage{tabularx}
-\usepackage[dvipsnames]{xcolor}
-\usepackage{float}
 \usepackage{rotating}
+\usepackage{tabularx}
+\usepackage{xspace}
+\usepackage{float}
 \usepackage{xstring} % for string operations
 \usepackage{wasysym} % Table legend with symbols input from post-processing
 \usepackage{MnSymbol} % Table legend with symbols input from post-processing
-%\usepackage[hidelinks]{hyperref} % make COCO papers clickable
+\usepackage{ifthen}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Definitions
