--- a/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
@@ -13,6 +13,17 @@
 \usepackage{MnSymbol} % Table legend with symbols input from post-processing
 \usepackage{ifthen}
 
+% Copyright
+%\setcopyright{none}
+%\setcopyright{acmcopyright}
+%\setcopyright{acmlicensed}
+\setcopyright{rightsretained}
+%\setcopyright{usgov}
+%\setcopyright{usgovmixed}
+%\setcopyright{cagov}
+%\setcopyright{cagovmixed}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Definitions
 
