--- a/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
@@ -24,6 +24,21 @@
 %\setcopyright{cagovmixed}
 
 
+% DOI
+\acmDOI{10.1145/123_4}
+
+% ISBN
+\acmISBN{123-4567-24-567/18/07}
+
+%Conference
+\acmConference[GECCO '18]{the Genetic and Evolutionary Computation Conference 2018}{July 15--19, 2018}{Kyoto, Japan}
+\acmYear{2018}
+\copyrightyear{2018}
+
+\acmPrice{15.00}
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Definitions
 
