Update path of picture files

--- a/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
@@ -39,29 +39,26 @@
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Definitions
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%% TO BE EDITED %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Algorithm names on the right of the ECDF figures can be modified by
-% uncommenting the following lines and inputting some text in the last
-% brackets, make sure the algorithms are in the same order as for the post-processing:
-% \newcommand{\algaperfprof}{Algorithm a short name}
-% \newcommand{\algbperfprof}{Algorithm b short name}
-% \newcommand{\algcperfprof}{Algorithm c short name}
-% \newcommand{\algdperfprof}{Algorithm c short name}
-% ...
-% Algorithm names as they appear in the tables, uncomment if necessary
-% \newcommand{\algatables}{\algaperfprof}  % first argument in the post-processing
-% \newcommand{\algbtables}{\algbperfprof}  % first argument in the post-processing
-% \newcommand{\algctables}{\algcperfprof}  % first argument in the post-processing
-% \newcommand{\algdtables}{\algdperfprof}  % second argument in the post-processing
+% Algorithm names as they appear in the tables, uncomment and adapt if necessary
+% \newcommand{\algAtables}{ALGO1}  % first argument in the post-processing
+% \newcommand{\algBtables}{ALGO2}  % second argument in the post-processing
+% \newcommand{\algCtables}{ALGO3}  % third argument in the post-processing
+% \newcommand{\algDtables}{ALGO4}  % forth argument in the post-processing
 % ...
 % location of pictures files
 \newcommand{\bbobdatapath}{ppdata/}
 \input{\bbobdatapath bbob_pproc_commands.tex}
-\graphicspath{{\bbobdatapath}}
+\graphicspath{{\bbobdatapath\algsfolder}}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 % pre-defined commands
 \newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
 \newcommand{\aRT}{\ensuremath{\mathrm{aRT}}}
