Update main text of latex template according to biobjective template - one file for single, 2 or more algs

--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -49,7 +49,7 @@
 % \newcommand{\algAtables}{ALGO1}  % first argument in the post-processing
 % \newcommand{\algBtables}{ALGO2}  % second argument in the post-processing
 % \newcommand{\algCtables}{ALGO3}  % third argument in the post-processing
-% \newcommand{\algDtables}{ALGO4}  % forth argument in the post-processing
+% \newcommand{\algDtables}{ALGO4}  % fourth argument in the post-processing
 % ...
 % location of pictures files
 \newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
