Update main text of latex template - one file for single, 2 or more algs

--- a/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSmultiple.tex
@@ -247,9 +247,9 @@ presented in
 \ifthenelse{\equal{\numberofalgorithms}{one}}{
 Figures~\ref{fig:aRTgraphs}, \ref{fig:ECDFs}, and \ref{fig:ECDFsingleOne} and Tables~\ref{tab:aRTs80} and \ref{tab:aRTs320}.
 }{\ifthenelse{\equal{\numberofalgorithms}{two}}{
-Figures~\ref{fig:scaling}, \ref{fig:scatterplots}, \ref{fig:ECDFs} and \ref{fig:ECDFsingleOne}, and Tables~\ref{tab:aRTs}.
+Figures~\ref{fig:scaling}, \ref{fig:scatterplots}, \ref{fig:ECDFs80D}, \ref{fig:ECDFs320D} and \ref{fig:ECDFsingleOne}, and Tables~\ref{tab:aRTs}.
 }{\ifthenelse{\equal{\numberofalgorithms}{three}}{
-Figures~\ref{fig:scaling}, \ref{fig:ECDFs}, and \ref{fig:ECDFsingleOne} and Tables~\ref{tab:aRTs}.
+Figures~\ref{fig:scaling}, \ref{fig:ECDFs80D}, \ref{fig:ECDFs320D}, and \ref{fig:ECDFsingleOne} and Tables~\ref{tab:aRTs}.
 }{}}}
 %%
 The experiments were performed with COCO \cite{hansen2016cocoplat}, version
@@ -486,30 +486,30 @@ unsuccessful trial under consideration.
 \begin{figure*}
 \centering
 \begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f101}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f104}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f107}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f110}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f113}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f102}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f105}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f108}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f111}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f114}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f103}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f106}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f109}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f112}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f115}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f116}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f119}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f122}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f125}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f128}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f117}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f120}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f123}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f126}
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f001}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f002}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f003}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f004}\\[-0.2em]
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f005}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f006}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f007}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f008}\\[-0.2em]
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f009}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f010}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f011}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f012}\\[-0.2em]
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f013}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f014}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f015}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f016}\\[-0.2em]
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f017}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f018}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f019}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f020}\\[-0.2em]
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f021}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f022}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f023}&
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f024}
 \vspace*{-1ex}
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
@@ -564,7 +564,7 @@ unsuccessful trial under consideration.
 \includegraphics[width=0.24\textwidth]{ppfigs_f023}&
 \includegraphics[width=0.24\textwidth]{ppfigs_f024}
 \end{tabular}
-\vspace*{-0.3cm}
+\vspace*{-0.2cm}
 \caption[Average running time (\aRT) divided by dimension
 versus dimension in log-log presentation]{
 \label{fig:scaling}
@@ -581,50 +581,47 @@ versus dimension in log-log presentation]{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
-% Empirical cumulative distribution functions (ECDFs) per function group.
+% Empirical cumulative distribution functions (ECDFs) per function group
+% for dimensions 80 and 320
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{figure*}
- \begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
- \multicolumn{2}{c}{80-D} & \multicolumn{2}{c}{320-D} \\
- \rot[2.9]{all functions}
- \includegraphics[height=0.14\textheight]{pprldistr_80D_noiselessall} & 
- \includegraphics[height=0.14\textheight]{pplogabs_80D_noiselessall} &
- \includegraphics[height=0.14\textheight]{pprldistr_320D_noiselessall} &
- \includegraphics[height=0.14\textheight]{pplogabs_320D_noiselessall}\\
- \rot[2.7]{separable fcts}
- \includegraphics[height=0.14\textheight]{pprldistr_80D_separ} & 
- \includegraphics[height=0.14\textheight]{pplogabs_80D_separ} &
- \includegraphics[height=0.14\textheight]{pprldistr_320D_separ} &
- \includegraphics[height=0.14\textheight]{pplogabs_320D_separ} \\
- \rot[2.75]{moderate fcts}
- \includegraphics[height=0.14\textheight]{pprldistr_80D_lcond} & 
- \includegraphics[height=0.14\textheight]{pplogabs_80D_lcond} &
- \includegraphics[height=0.14\textheight]{pprldistr_320D_lcond} & 
- \includegraphics[height=0.14\textheight]{pplogabs_320D_lcond}\\
- \rot[1.4]{ill-conditioned fcts}
- \includegraphics[height=0.14\textheight]{pprldistr_80D_hcond} & 
- \includegraphics[height=0.14\textheight]{pplogabs_80D_hcond} &
- \includegraphics[height=0.14\textheight]{pprldistr_320D_hcond} &
- \includegraphics[height=0.14\textheight]{pplogabs_320D_hcond} \\
- \rot[2.1]{multi-modal fcts}
- \includegraphics[height=0.14\textheight]{pprldistr_80D_multi} & 
- \includegraphics[height=0.14\textheight]{pplogabs_80D_multi} &
- \includegraphics[height=0.14\textheight]{pprldistr_320D_multi} &
- \includegraphics[height=0.14\textheight]{pplogabs_320D_multi} \\
- \rot[1.4]{weak structure fcts}
- \includegraphics[height=0.14\textheight]{pprldistr_80D_mult2} & 
- \includegraphics[height=0.14\textheight]{pplogabs_80D_mult2} &
- \includegraphics[height=0.14\textheight]{pprldistr_320D_mult2} & 
- \includegraphics[height=0.14\textheight]{pplogabs_320D_mult2}\\
+ \begin{tabular}{@{}c@{\hspace*{0.05\textwidth}}c@{}}
+ separable fcts & moderate fcts \\
+ \includeperfprof{pprldmany_80D_separ} &
+ \includeperfprof{pprldmany_80D_lcond} \\ 
+ill-conditioned fcts & multi-modal fcts \\
+ \includeperfprof{pprldmany_80D_hcond} &
+ \includeperfprof{pprldmany_80D_multi} \\ 
+ weakly structured multi-modal fcts & all functions\\
+ \includeperfprof{pprldmany_80D_mult2} & 
+ \includeperfprof{pprldmany_80D_noiselessall} 
  \end{tabular}
-\vspace*{-0.2cm}
- \caption{\label{fig:ECDFs}
- \bbobpprldistrlegendtwo{}
- }
+\caption{
+\label{fig:ECDFs80D}
+\bbobECDFslegend{80}
+}
 \end{figure*}
 
 
+\begin{figure*}
+ \begin{tabular}{@{}c@{\hspace*{0.05\textwidth}}c@{}}
+ separable fcts & moderate fcts \\
+ \includeperfprof{pprldmany_320D_separ} &
+ \includeperfprof{pprldmany_320D_lcond} \\ 
+ill-conditioned fcts & multi-modal fcts \\
+ \includeperfprof{pprldmany_320D_hcond} &
+ \includeperfprof{pprldmany_320D_multi} \\ 
+ weakly structured multi-modal fcts & all functions\\
+ \includeperfprof{pprldmany_320D_mult2} & 
+ \includeperfprof{pprldmany_320D_noiselessall} 
+ \end{tabular}
+\caption{
+\label{fig:ECDFs320D}
+\bbobECDFslegend{320}
+}
+\end{figure*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -670,11 +667,14 @@ versus dimension in log-log presentation]{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
 % Table showing the average runtime (aRT in number of function
-% evaluations) divided by the best aRT measured during BBOB-2009 (given in the
-% first row of each cell) for functions $f_1$--$f_{24}$.
+% evaluations) for functions $f_1$--$f_{24}$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table*}
+%\hfill80-D\hfill~\\[1ex]
+{\normalsize \color{red}
+\ifthenelse{\isundefined{\algorithmG}}{}{more than 6 algorithms: please split the tables below by hand until it fits to the page limits}
+}
 \mbox{\begin{minipage}[t]{0.495\textwidth}
 \centering
 80-D\\[5pt]
