--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -10,6 +10,14 @@
   year = 2016
 }
 
+@ARTICLE{bbobls2018func, 
+  author = {},
+  title = {},
+  journal = {ArXiv e-prints},
+	volume = {},
+  year = 2019
+}
+
 @ARTICLE{biobj2016perfass, 
   author = {Brockhoff, D. and Tu{\v s}ar, T. and Tu{\v s}ar, D. and
              Wagner, T. and Hansen, N. and Auger, A.},
