--- a/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
@@ -110,7 +110,7 @@
 \begin{document}
 
 
-\title{Black-Box Optimization Benchmarking Template for the Comparison of Multiple Algorithms on the \bbobls Testbed}
+\title{Black-Box Optimization Benchmarking Template for the Comparison of Algorithms on the \bbobls Testbed}
 \renewcommand{\shorttitle}{Template to Compare Multiple Algorithms on the \bbobls Testbed}
 \titlenote{Submission deadline: March 31st.}
 %Camera-ready paper due April 24th.}}
