Short title correction

--- a/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
@@ -111,7 +111,7 @@
 
 
 \title{Black-Box Optimization Benchmarking Template for the Comparison of Algorithms on the \bbobls Testbed}
-\renewcommand{\shorttitle}{Template to Compare Multiple Algorithms on the \bbobls Testbed}
+\renewcommand{\shorttitle}{Template to Compare Algorithms on the \bbobls Testbed}
 \titlenote{Submission deadline: March 31st.}
 %Camera-ready paper due April 24th.}}
 \subtitle{Draft version}
