Add (empty for now) reference - Update main text of latex template according to unified template

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1,6 +1,14 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
+@ARTICLE{bbobls2019func, 
+  author = {},
+  title = {},
+  journal = {},
+  volume = {},
+  year = 2019
+}
+
 @ARTICLE{hansen2016perfass, 
   author = {Hansen, N. and Auger, A and Brockhoff, D. and Tu{\v s}ar, D.
 	           and Tu{\v s}ar, T.},
@@ -8,14 +16,6 @@
   journal = {ArXiv e-prints},
   volume = {\href{https://arxiv.org/abs/1605.03560}{arXiv:1605.03560}},
   year = 2016
-}
-
-@ARTICLE{bbobls2018func, 
-  author = {},
-  title = {},
-  journal = {ArXiv e-prints},
-	volume = {},
-  year = 2019
 }
 
 @ARTICLE{biobj2016perfass, 
