updated submission deadline for GECCO 2019

--- a/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
@@ -120,7 +120,7 @@
 
 \title{Black-Box Optimization Benchmarking Template for the Comparison of Algorithms on the \bbobls Testbed}
 \renewcommand{\shorttitle}{Template to Compare Algorithms on the \bbobls Testbed}
-\titlenote{Submission deadline: March 31st.}
+\titlenote{Submission deadline: April 3rd.}
 %Camera-ready paper due April 24th.}}
 \subtitle{Draft version}
 
