--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -64,7 +64,7 @@
 
 \title{Black-Box Optimization Benchmarking Template for Noiseless Function
 Testbed}
-\titlenote{Submission deadline: March 31st.}
+\titlenote{Submission deadline: April 3rd.}
 %Camera-ready paper due April 24th.}}
 \subtitle{Draft version}
 
