--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -70,7 +70,7 @@
 
 \title{Black-Box Optimization Benchmarking Template for the Bi-Objective \bbobbiobj Test Suite}
 \renewcommand{\shorttitle}{Template for Benchmarking Single Algorithms on the \bbobbiobj Testbed}
-\titlenote{Submission deadline: March 31st.}
+\titlenote{Submission deadline: April 3rd.}
 %Camera-ready paper due April 24th.}}
 \subtitle{Draft version}
 
