--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -121,7 +121,7 @@
 
 \title{Black-Box Optimization Benchmarking Template for the Comparison of Algorithms on the \bbobnoisy Testbed}
 \renewcommand{\shorttitle}{Template to Compare Algorithms on the \bbobnoisy Testbed}
-\titlenote{Submission deadline: March 31st.}
+\titlenote{Submission deadline: April 3rd.}
 %Camera-ready paper due April 24th.}}
 \subtitle{Draft version}
 
