--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -65,17 +65,19 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % read in data and deal with the different number of algorithms:
 \input{\bbobdatapath cocopp_commands.tex}
-\ifthenelse{\isundefined{\numofalgs}}
+\ifthenelse{\equal{\numofalgs}{1}}
 {
-		\newcommand{\numberofalgorithms}{one}
-}{
-	  \ifthenelse{\equal{\numofalgs}{2}}
-	  {
-	      \newcommand{\numberofalgorithms}{two}
-	  }{
-	      \newcommand{\numberofalgorithms}{three}
-	  }
+    \newcommand{\numberofalgorithms}{one}
 }
+{
+    \ifthenelse{\equal{\numofalgs}{2}}
+    {
+        \newcommand{\numberofalgorithms}{two}
+    }{
+	    \newcommand{\numberofalgorithms}{three}
+	}
+}
+
 
 \ifthenelse{\equal{\numberofalgorithms}{one}}{
    \graphicspath{{\bbobdatapath\algfolder}}}{
@@ -267,9 +269,9 @@ The experiments were performed with COCO \cite{hansen2016cocoplat}, version
 
 The \textbf{average runtime (aRT)}, used in the %figures and
 tables,
-depends on a given quality indicator value, $\Itarget=\fopt+\Df$, and is
+depends on a given target precision, $\Itarget=\fopt+\Df$, and is
 computed over all relevant trials as the number of function
-evaluations executed during each trial while the best indicator value
+evaluations executed during each trial while the best function value
 did not reach \ftarget, summed over all trials and divided by the
 number of trials that actually reached \ftarget\
 \cite{hansen2016exp,price1997dev}.
