--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1,12 +1,16 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
-@ARTICLE{bbobls2019func, 
-  author = {},
-  title = {},
-  journal = {},
-  volume = {},
-  year = 2019
+@unpublished{elhara:hal-02068407,
+  TITLE = {{COCO: The Large Scale Black-Box Optimization Benchmarking (bbob-largescale) Test Suite}},
+  AUTHOR = {Elhara, Ouassim Ait and Varelas, Konstantinos and Nguyen, Duc Hung and Tusar, Tea and Brockhoff, Dimo and Hansen, Nikolaus and Auger, Anne},
+  URL = {https://hal.inria.fr/hal-02068407},
+  NOTE = {working paper or preprint},
+  YEAR = {2019},
+  MONTH = Mar,
+  PDF = {https://hal.inria.fr/hal-02068407/file/bbob-largescale-functions.pdf},
+  HAL_ID = {hal-02068407},
+  HAL_VERSION = {v1},
 }
 
 @ARTICLE{hansen2016perfass, 
